--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
-Caio Freitas
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+
+    <title> Caio V. G. Freitas </title>
+</head>
+
+<body>
+    <div style="width:1000px;margin: 0px auto;">
+        <header id="header" width="400px" style="display:flex;justify-content: space-around;">
+            <a href="#profile-intro">Home</a>
+            <a href="#updates">Updates</a>
+            <!-- <a href="#projects">Projects</a> -->
+        </header>
+        <div id="profile">
+            <div id="profile-pic">
+                <img src="assets/images/profile.jpg" />
+            </div>
+            <div id="profile-intro">
+                <div id="profile-name">Caio Freitas</div>
+                <div id="profile-email">caio dot freitas at usp dot br</div>
+                <p>
+                    I'm an Electrical Engineering master's student at the TU Darmstadt, Germany, with focus on automation Engineering.
+                    I'm currently working on my master's thesis
+                    at the <a href="https://www.ias.tu-darmstadt.de/">Institute for Automation Systems</a>, 
+                    on task-oriented imitation learning for robotics using generative models.
+                    My bachelor's degree was in Electrical Engineering at the University of São Paulo, Brazil.
+                    My research interests include robotics, machine learning, and computer vision, control theory, and optimization.
+                </p>
+                <p>
+                    I'm fortunate to be advised by <a href="https://irosalab.com/people/ali-younes/">Ali Younes</a> and <a href="https://www.ias.informatik.tu-darmstadt.de/Team/AnThaiLe">An Thai Le</a>.
+                    My research will focus on robotics imitation learning.
+                </p>
+                <div>
+                    <a href="assets/files/cv.pdf">
+                      CV
+                    </a>
+                    /
+                    <a href="https://www.linkedin.com/in/caio-freitas-21048b17b/">
+                      LinkedIn
+                    </a>
+                    /
+                    <a href="https://github.com/caio-freitas">
+                        Github
+                    </a>
+                    </a>
+                </div>
+            </div>
+            <div style="clear: both;"></div>
+        </div>
+        <div class="section" id="updates">
+            <h1>Updates</h1>
+            <ul>
+                <li> <b>Jun 2023</b> Beginning of my master's thesis at the <a href="https://www.ias.tu-darmstadt.de/">Institute for Automation Systems</a>, TU Darmstadt, Germany
+                <li> <b>Nov 2022</b> Submission of my bachelor's thesis at the <a href="https://www.bcs.tu-darmstadt.de/welcome/index.en.jsp">Self-Organizing Systems Lab</a>, TU Darmstadt, Germany with the title "Visually Localizing, Approaching and Carrying
+                    Objects using Magnetic MAVs"
+            </ul>
+            <p></p>
+            <div style="clear: both;"></div>
+        </div>
+        <div class="divider"></div>
+    </div>
+</body>
+
+</html>
