--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 
     <title> Caio V. G. Freitas </title>
 </head>
@@ -23,7 +23,7 @@
             </div>
             <div id="profile-intro">
                 <div id="profile-name">Caio Freitas</div>
-                <div id="profile-email">caio dot freitas at usp dot br</div>
+                <div id="profile-email">caio.freitas@usp.br</div>
                 <p>
                     I'm an Electrical Engineering master's student at the TU Darmstadt, Germany, with focus on automation Engineering.
                     I'm currently working on my master's thesis
