--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <img src="assets/images/profile.jpg" />
             </div>
             <div id="profile-intro">
-                <div id="profile-name">Caio Freitas</div>
-                <div id="profile-email">caio.freitas@usp.br</div>
+                <div id="profile-name">Caio V. G. Freitas</div>
+                <div id="profile-email">caio.freitas@usp.br / caio.freitas@stud.tu-darmstadt.de</div>
                 <p>
                     I'm an Electrical Engineering master's student at the TU Darmstadt, Germany, with focus on automation Engineering.
                     I'm currently working on my master's thesis
@@ -33,8 +33,7 @@
                     My research interests include robotics, machine learning, and computer vision, control theory, and optimization.
                 </p>
                 <p>
-                    I'm fortunate to be advised by <a href="https://irosalab.com/people/ali-younes/">Ali Younes</a> and <a href="https://www.ias.informatik.tu-darmstadt.de/Team/AnThaiLe">An Thai Le</a>.
-                    My research will focus on robotics imitation learning.
+                    I'm fortunate to be advised by <a href="https://irosalab.com/people/ali-younes/">Ali Younes</a> and <a href="https://www.ias.informatik.tu-darmstadt.de/Team/AnThaiLe">An Thai Le</a> for my master's thesis. 
                 </p>
                 <div>
                     <a href="assets/files/cv.pdf">
