--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 
     <title> Caio V. G. Freitas </title>
+
+    <link rel="icon" href="assets/images/favicon.ico">
 </head>
 
 <body>
