--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                     <a href="https://github.com/caio-freitas">
                         Github
                     </a>
+                     /
+                    <a href="https://huggingface.co/caio-freitas">
+                        HuggingFace
+                    </a>
                     </a>
                 </div>
             </div>
