--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     My research interests include robotics, machine learning, and computer vision, control theory, and optimization.
                 </p>
                 <p>
-                    I'm fortunate to be advised by <a href="https://irosalab.com/people/ali-younes/">Ali Younes</a> and <a href="https://www.ias.informatik.tu-darmstadt.de/Team/AnThaiLe">An Thai Le</a> for my master's thesis. 
+                    I was fortunate to be advised by <a href="https://pearl--lab-com.translate.goog/people/georgia-chalvatzaki/?_x_tr_sl=en&_x_tr_tl=pt&_x_tr_hl=pt-BR&_x_tr_pto=sc">Georgia Chalvatzaki</a>, <a href="https://irosalab.com/people/ali-younes/">Ali Younes</a> and <a href="https://www.ias.informatik.tu-darmstadt.de/Team/AnThaiLe">An Thai Le</a> for my master's thesis exploring diffusion-based graph generative models. 
                 </p>
                 <div>
                     <a href="assets/files/cv.pdf">
@@ -61,9 +61,11 @@
         <div class="section" id="updates">
             <h1>Updates</h1>
             <ul>
-                <li> <b>Jun 2023</b> Beginning of my master's thesis at the <a href="https://www.ias.tu-darmstadt.de/">Institute for Automation Systems</a>, TU Darmstadt, Germany
+                <li> <b>May 2023</b> Submission of my master's thesis at the <a href="https://www.ias.tu-darmstadt.de/">Institute for Automation Systems</a>, TU Darmstadt, Germany with the title "Graph Diffusion for Imitation Learning in Robotics"
                 <li> <b>Nov 2022</b> Submission of my bachelor's thesis at the <a href="https://www.bcs.tu-darmstadt.de/welcome/index.en.jsp">Self-Organizing Systems Lab</a>, TU Darmstadt, Germany with the title "Visually Localizing, Approaching and Carrying
                     Objects using Magnetic MAVs"
+                <li> <b>Oct 2021</b> Beginning of my double degree at the Technische Universität Darmstadt, pursuing my master's in automation engineering
+                <li> <b>Feb 2018</b> Beginning of my studies (diploma) in Electrical Engineering at the University of São Paulo (Poli-USP)
             </ul>
             <p></p>
             <div style="clear: both;"></div>
