--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div id="profile-intro">
                 <div id="profile-name">Caio V. G. Freitas</div>
-                <div id="profile-email">caio.freitas@usp.br / caio.freitas@stud.tu-darmstadt.de</div>
+                <div id="profile-email">caio.freitas@usp.br / caio.freitas@stud.tu-darmstadt.de / caiovgfreitas@proton.me </div>
                 <p>
                     I'm an Electrical Engineering master's student at the TU Darmstadt, Germany, with focus on automation Engineering.
                     I'm currently working on my master's thesis
